# datatalks-club-labs

./: .gitignore  README.md
llm-zoomcamp/: README.md
llm-zoomcamp/01-agentic-rag/: .env.example  README.md  hw1.py  pyproject.toml
llm-zoomcamp/02-vector-search/: README.md  hw2.py  pyproject.toml
llm-zoomcamp/03-orchestration/: README.md  docker-compose.yml
llm-zoomcamp/03-orchestration/flows/: 4_simple_agent_3_sentences.yaml
llm-zoomcamp/04-evaluation/: README.md  hw4.py  pyproject.toml
llm-zoomcamp/05-monitoring/: .env.example  README.md  hw5.py  pyproject.toml
llm-zoomcamp/06-dlt-traces/: README.md  analyze_traces.py  generate_mock_traces.py  load_traces.py  pyproject.toml
llm-zoomcamp/software-learning-rag-assistant/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dashboard.py  docker-compose.yml  evaluate_llm.py  evaluate_retrieval.py  ingest.py  pyproject.toml
llm-zoomcamp/software-learning-rag-assistant/data/raw/: docker_basics.md  docker_troubleshooting.md  llm_monitoring.md  python_project_structure.md  rag_basics.md  rag_evaluation.md  software_debugging.md  vector_search.md
llm-zoomcamp/software-learning-rag-assistant/src/: chunking.py  config.py  feedback.py  monitoring.py  rag.py  search.py
