[project]
name = "llm-zoomcamp-hw1"
version = "0.1.0"
description = ""
authors = [
    {name = "zoelinsg",email = "zoelin.sg@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "gitsource (>=0.0.5,<0.0.6)",
    "minsearch (>=0.1.1,<0.2.0)",
    "openai (>=2.43.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
