[project]
name = "llm-zoomcamp-hw2"
version = "0.1.0"
description = ""
authors = [
    {name = "zoelinsg",email = "zoelin.sg@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "onnxruntime (>=1.27.0,<2.0.0)",
    "tokenizers (>=0.23.1,<0.24.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "minsearch (>=0.1.1,<0.2.0)",
    "gitsource (>=0.0.5,<0.0.6)",
    "huggingface-hub (>=1.20.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
