[project]
name = "llm-zoomcamp-hw4"
version = "0.1.0"
description = ""
authors = [
    {name = "zoelinsg",email = "zoelin.sg@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "minsearch (>=0.2.0,<0.3.0)",
    "gitsource (>=0.0.5,<0.0.6)",
    "onnxruntime (>=1.27.0,<2.0.0)",
    "tokenizers (>=0.23.1,<0.24.0)",
    "huggingface-hub (>=1.21.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
