[project]
name = "llm-zoomcamp-hw6-dlt-traces"
version = "0.1.0"
description = ""
authors = [
    {name = "zoelinsg", email = "zoelin.sg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dlt[duckdb]>=1.29.0,<2.0.0",
    "duckdb>=1.1.0",
    "pandas>=2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"