[project]
name = "software-learning-rag-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "zoelinsg",email = "zoelin.sg@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "minsearch (>=0.2.0,<0.3.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "streamlit (>=1.59.2,<2.0.0)",
    "plotly (>=6.9.0,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
